fix badge dot align

--- a/src/style.css
+++ b/src/style.css
@@ -133,15 +133,11 @@ body {
 
 /* Status */
 .status {
-  @apply flex w-fit items-center justify-center gap-1.5 pl-2 pr-3 py-1 text-xs font-medium rounded-full capitalize whitespace-nowrap leading-tight select-none;
+  @apply inline-flex items-center gap-x-1.5 px-3 py-1 text-xs font-medium rounded-full capitalize whitespace-nowrap select-none;
 }
-
 .status-bullet {
-  @apply w-2 h-2 rounded-full bg-current shrink-0;
-}
-
-.status-label {
-  @apply text-inherit relative top-0.5;
+  @apply w-1.5 h-1.5 rounded-full bg-current shrink-0 relative;
+  top: -1px;
 }
 
 /* Status variants */
